@@ -2,6 +2,10 @@
 Changes with Apache 2.3.0
 [ When backported to 2.2.x, remove entry from this file ]
 
+  *) mod_proxy_http: Introduce environment variable proxy-initial-not-pooled to
+     avoid reusing pooled connections if the client connection is an initial
+     connection. PR 37770. [Ruediger Pluem]
+
   *) mod_proxy: Add connectiontimeout parameter for proxy workers in order to
      be able to set the timeout for connecting to the backend separately.
      PR 45445. [Ruediger Pluem, rahul <rahul sun.com>]
